fixed wave clipping when zooming

--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,9 @@
 
 
 .wave {
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    #position: absolute;
+    #bottom: 0;
+    #left: 0;
     width: 200%;
     overflow: hidden;
     line-height: 0;
@@ -28,15 +28,19 @@
     }
 }
 
-.wave svg {
+svg {
     background: #003e29;
     position: relative;
     display: block;
-    width: calc(110% + 1.3px);
     height: 167px;
+    width: 200%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+    animation:wave 20s infinite linear;
 }
 
-.wave .shape-fill {
+.shape-fill {
     fill: #FFFFFF;
 }
 
@@ -57,16 +61,26 @@
     margin-bottom: 80px;
 }
 
+
+
 #section1 {
     position: absolute;
     width: 100%;
-    height: 40vh;
-    background-color: #003e29;
+    #height: 40vh;
+    #background-color: #003e29;
     color: #467061;
+    #display: flex;
+    #align-items: center;
+    #justify-content: center;
+    overflow-y: hidden;
+}
+
+#section1-header {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-bottom: 20vh;
+    background-color: #003e29;
+    padding: 5px;
 }
 
 #portfolio {
@@ -90,7 +104,7 @@
 #projectslist {
     background: white;
     color: #003e29;
-    margin-top: 50vh;
+    margin-top: 55vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -121,13 +135,9 @@
     }
 
     #section1 {
-        padding-bottom: 50px;
-        height: 30vh;
+        margin-bottom: 200px;
     }
 
-    .wave {
-        height: 100px;
-    }
 }
 
 @media (max-width: 767px) {
@@ -147,12 +157,12 @@
     }
 
     #section1 {
-        padding-bottom: 50px;
-        height: 30vh;
+        #height: 20vh;
+        margin-bottom: 0;
     }
 
     #projectslist {
-        margin-top: 35vh;
+        margin-top: 30vh;
     }
 
     #profilepicture {
